Task 0 - Fixing flickering issue on select forms, attempt 2 :)

--- a/src/styles.css
+++ b/src/styles.css
@@ -649,8 +649,6 @@ table.table {
   }
 }
 
-.no_flickering {
-  -webkit-backface-visibility: hidden;
+select.form-control {
+  transition: none;
 }
-
-
